# VTM

./: .cproject  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  README.md  README.txt  enc.bit  vtm-cmake.patch
.github/workflows/: ccpp.yml
cfg/: encoder_intra_vtm.cfg  encoder_lowdelay_P_vtm.cfg  encoder_lowdelay_vtm.cfg  encoder_randomaccess_vtm.cfg  layers.cfg
cfg/444/: yuv444.cfg
cfg/field/: HM_encoder_lowdelay_field_GOP8.cfg  HM_encoder_randomaccess_field_GOP16.cfg  VTM_encoder_lowdelay_field_GOP16.cfg  VTM_encoder_lowdelay_field_GOP8.cfg  VTM_encoder_randomaccess_field_GOP16.cfg  VTM_encoder_randomaccess_field_GOP32.cfg
cfg/lossless/: lossless.cfg  lossless_mixed.cfg
cfg/multi-layer/: two_layers.cfg  two_layers_ELonlyILP.cfg
cfg/nonCTC-SliceConfigExamples/: TwoSubpictures_with_EightSlices.cfg  encoder_randomaccess_vtm_RasterScanSlice.cfg  encoder_randomaccess_vtm_RectangularSlice.cfg  encoder_randomaccess_vtm_RectangularSliceFixedSize.cfg  encoder_randomaccess_vtm_SingleTilePerSlice.cfg  encoder_rectangular_slice_classB.cfg  subpicture_4Slice2HorSubPic.cfg  subpicture_4Slice2VerSubPic.cfg
cfg/partitioning/: subpicture_4_slice_2_tiles_4_subpic.cfg
cfg/per-class/: classF.cfg  classH1.cfg  classH2.cfg  formatRGB.cfg
cfg/per-sequence/: BasketballPass.cfg
cfg/per-sequence-HDR/: H1_ShowGirl.cfg  H2_DayStreet.cfg  H2_FlyingBirds2.cfg  H2_PeopleInShoppingCenter.cfg  H2_SunsetBeach2.cfg
cfg/rpr/: scale1.5x.cfg  scale2.0x.cfg  scale4.0x.cfg
cfg/sei/: subpicture_level.cfg
cfg/sei_vui/: generalized_cubemap_projection.cfg  subpicture_level.cfg  timing.cfg  vui_HD.cfg  vui_UHD_PQ.cfg
doc/: mainpage.h  software-manual.tex
source/App/BitstreamExtractorApp/: BitstreamExtractorApp.cpp  BitstreamExtractorApp.h  BitstreamExtractorAppCfg.cpp
source/App/DecoderAnalyserApp/: CMakeLists.txt
source/App/DecoderApp/: CMakeLists.txt  DecApp.cpp  DecApp.h  DecAppCfg.cpp  DecAppCfg.h  decmain.cpp
source/App/DecoderLib/: CMakeLists.txt  Logger.cpp  libVTMDecoder.cpp  libVTMDecoder.h  libVTMDecoderInternals.cpp  libVTMDecoderInternals.h
source/App/EncoderApp/: CMakeLists.txt  EncApp.cpp  EncApp.h  EncAppCfg.cpp  EncAppCfg.h  EncAppCommon.cpp  EncAppCommon.h  encmain.cpp
source/App/EncoderLib/: CMakeLists.txt  EncApp.cpp  EncApp.h  EncAppCfg.cpp  EncAppCfg.h  libVTMEncoder.cpp  libVTMEncoder.h  libVTMEncoder.pc.cmakein  libVTMEncoderCfg.cpp  libVTMEncoderCfg.h  libVTMEncoderDefaultConfigs.cpp  libVTMEncoderDefaultConfigs.h  libvtmencoder.cpp  libvtmencoder.h  libvtmencoder.pc.cmakein
source/App/Parcat/: CMakeLists.txt  parcat.cpp
source/App/SEIRemovalApp/: SEIRemovalApp.cpp  seiremovalmain.cpp
source/App/StreamMergeApp/: StreamMergeApp.cpp  StreamMergeApp.h  StreamMergeAppCfg.cpp
source/Lib/CommonAnalyserLib/: CMakeLists.txt
source/Lib/CommonLib/: AdaptiveLoopFilter.cpp  AdaptiveLoopFilter.h  AffineGradientSearch.cpp  AlfParameters.h  BinaryDecisionTree.cpp  BinaryDecisionTree.h  Buffer.cpp  Buffer.h  CMakeLists.txt  ChromaFormat.h  CodingStatistics.h  CodingStructure.cpp  CodingStructure.h  Common.h  CommonDef.h  ContextModelling.cpp  ContextModelling.h  Contexts.cpp  Contexts.h  CprHashMap.cpp  CprHashMap.h  CrossCompPrediction.cpp  CrossCompPrediction.h  DepQuant.cpp  DepQuant.h  HRD.cpp  HRD.h  Hash.cpp  Hash.h  IbcHashMap.cpp  IbcHashMap.h  InterPrediction.cpp  InterPrediction.h  InterpolationFilter.cpp  InterpolationFilter.h  IntraPrediction.cpp  IntraPrediction.h  LoopFilter.cpp  LoopFilter.h  MCTS.cpp  (+53 more)
source/Lib/DecoderLib/: AnnexBread.cpp  BinDecoder.cpp  BinDecoder.h  CABACReader.cpp  CABACReader.h  DecCu.cpp  DecCu.h  DecLib.cpp  DecLib.cpp~RF392797.TMP  DecLib.h  DecSlice.cpp  DecSlice.h  NALread.cpp  NALread.h  SEIread.cpp  SEIread.h  VLCReader.cpp  VLCReader.cpp~RF39d7bd.TMP  VLCReader.h
source/Lib/EncoderLib/: Analyze.h  AnnexBwrite.h  BinEncoder.cpp  BinEncoder.h  CABACWriter.cpp  CABACWriter.h  EncAdaptiveLoopFilter.cpp  EncAdaptiveLoopFilter.h  EncCfg.h  EncCfgParam.h  EncCu.cpp  EncCu.h  EncGOP.cpp  EncGOP.h  EncHRD.cpp  EncHRD.h  EncLib.cpp  EncLib.h  EncLibCommon.cpp  EncLibCommon.h  EncModeCtrl.cpp  EncModeCtrl.h  EncReshape.cpp  EncReshape.h  EncSampleAdaptiveOffset.cpp  EncSampleAdaptiveOffset.h  EncSlice.cpp  EncSlice.h  EncTemporalFilter.cpp  EncTemporalFilter.h  InterSearch.cpp  InterSearch.h  IntraSearch.cpp  IntraSearch.h  NALwrite.cpp  NALwrite.h  RateCtrl.cpp  RateCtrl.h  SEIEncoder.cpp  (+6 more)
src/: CMakeLists.txt  Logger.h  libVTMDecoder.cpp
(+15 files in other folders)
